--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,16 @@ TODO: PROFILE SECTION :
     Add functionality to buttons
             make subcollections comments, liked, and reposts for each post
             if length > 1 make red, or display amount on top right of icon
+
+        DELETE like when user clicks again
+        
+ADD BATCH WRITES FIRESTORE
+USE transaction firestore for batching crud
+
+ADD WORD LIMIT TO REPLY and show on ui
+
+make like limit 1 per user
+
+SHOW REPLIES on show replies buttton?
+
+FIXME: CANT REFERENCE NESTED SUB COLLECTIONS IN FIREBASE, = cant acces users->posts->likes to reference it on the individual users profile.
