--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,18 @@
 TODO: PROFILE SECTION :
-            make edit profile btn function to edit bio n stuff
-
-//ALERT BOX ON LOGIN ERROR and conform delete
-
-/ON SIGN UP, fetch bad words dictionary n make sure its not on there???    
-//favicon emoji
+make edit profile btn function to edit bio n stuff
 //make functions reusable
+and conform delete
+//responsive
+//fix timestamp and addingpost interferance
 
 DONE
-delete input after posting or replying
-shows posts count of each user, can see replies of a user and who theyre replying to
-//TIME AGO EACH POST
-fix like -1 on click from 0 in viewpost, not mainfeed, and change color back to original when unliked
+//favicon emoji
+//check if username already exits then error
+//display signup errors:user or email already taken, password shorter than 6 characters.
 
 MAIN PROBLEM
 //on profile tab, post id is different than mainfeed post id, so viewpost function cant find it RIP, data inconsistency
 things i wish i couldve done better, consistent data, user.id and user.uid confusing, i was organized, put reusable functions in their own file.
+//on inital load already check, if user refreshes their ui doesnt show they liked a post
+
+
